# student_record_system

./: CMakeLists.txt  README.md  add.c  average_score.c  bye.c  display_records.c  free_storage.c  get_input.c  init_storage.c  init_student.c  interface.c  main.c  main.h  output  remark.c  remove.c  save.c  search.c  sort_records.c  srs  srs.h  update.c  welcome.c
